Fixed buttons and alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,13 +48,16 @@ header {
   padding-top: 20px;
 }
 
+footer {
+  height: 100px;
+}
+
 .logo {
   float: left;
 }
 
 .content-container {
   position: relative;
-  width: 1000px;
   margin: 0 auto;
 }
 
@@ -63,27 +66,28 @@ header {
   padding: 20px;
   padding-top: 40px;
   text-align: left;
-  width: 90%;
   /*float: left;*/
   position: relative;
   border: 5px solid #000000;
-  font-size: 24px;
+  font-size: 20px;
   color: #5a5a5a;
 }
 
 #die_button {
   vertical-align: left;
+  width: 195px;
 }
 
 #roll_result {
   float: right;
   vertical-align: center;
   font-family: 'Cinzel', serif;
-  font-size: 48px;
+  font-size: 35px;
   color: black;
   text-align: center;
   background: white;
-  margin: 18px;
+  margin-top: 25px;
+  margin-right: 10px;
   width: 100px;
   -moz-border-radius: 14px;
   -webkit-border-radius: 14px;
@@ -98,6 +102,7 @@ header {
 
 input {
   margin: 5px;
+  margin-left: 10px;
   text-align: justify;
 }
 
@@ -106,12 +111,12 @@ input {
 }
 button, input[type="submit"]{
   color: rgb(96, 96, 96);
-  font-size: 24px;
-  padding: 15px;
+  font-size: 20px;
+  padding: 10px;
   text-shadow: 0px -1px 0px rgba(30, 30, 30, 0.8);
   -webkit-border-radius: 25px;
   -moz-border-radius: 25px;
-  border-radius: 25px;
+  border-radius: 20px;
   background: rgb(239, 180, 43);
   background: -moz-linear-gradient(90deg, rgb(239, 180, 43) 30%, rgb(255, 225, 33) 70%);
   background: -webkit-linear-gradient(90deg, rgb(239, 180, 43) 30%, rgb(255, 225, 33) 70%);
@@ -121,5 +126,64 @@ button, input[type="submit"]{
   -webkit-box-shadow: 0px 2px 1px rgba(50, 50, 50, 0.75);
   -moz-box-shadow:    0px 2px 1px rgba(50, 50, 50, 0.75);
   box-shadow:         0px 2px 1px rgba(50, 50, 50, 0.75);
+}
+
+.playcards {
+  display: inline-block;
+}
+
+label.answer-label {
+  text-align: right;
+  display: inline-block;
+  width: 250px;
+  color: green; 
+}
+
+.game-controls {
+  position: relative;
+  height: 110px;
+}
+
+.die {
+  float: right;
+  margin: 10px;
+}
+
+.roll_result {
+  margin: 10px;
+}
+
+.next-round-button {
+  margin: 10px;
+}
+
+.timer {
+  float: right;
+  margin: 10px;
+}
+
+.timer button {
+  width: 195px;
+}
+
+button[disabled] {
+  background: #ccc;
+}
+
+button:focus {
+  outline: 0;
+}
+
+.score {
+  margin: 50px;
+}
+
+.rejected-button {
+  background-color: red;
+}
+
+.rejected-input {
+  text-decoration: line-through;
+  background-color: lightgray;
 }
 
